--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: the wearther blog
+title: The wearther blog
 subtitle:
 description: The official blog of the most useful weather forecasting webapp wearther.cc. The weather forecast that styles you rain or shine. It helps you decide on what to wear for the given weather
 author: Ronald Suwandi
